updated redux to redux toolkit and updated the UI

--- a/src/styles/_account.scss
+++ b/src/styles/_account.scss
@@ -133,7 +133,7 @@
       margin-bottom: $form-margin-bottom;
     }
   }
-
+  //for add a new contact
   .btn {
     width: 20rem;
   }
@@ -200,7 +200,7 @@
 
   .btn {
     // align-self: center;
-    width: 30%;
+    width: 35%;
     margin-right: 3rem;
     margin-bottom: 0;
     text-transform: capitalize;
