--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,4 +9,6 @@ $font: "Lato", sans-serif;
 
 //number variables
 $page-content-height: calc(100vh - 8rem); //header is 7rem and 10px shadow/margin bottom
+$page-content-height-tab: calc(100vh - 11rem); //header is 7rem and 10px shadow/margin bottom
 $form-margin-bottom: 1.5rem;
+$form-margin-bottom-tab: 3rem;
