--- a/src/styles/_account.scss
+++ b/src/styles/_account.scss
@@ -1,9 +1,18 @@
 .account {
   display: grid;
   grid-template-rows: 7rem 1fr;
-  height: $page-content-height;
+  // height: $page-content-height;
+  min-height: $page-content-height;
   justify-items: center;
   align-items: center;
+
+  @include respond(tab-port) {
+    // hei;
+  }
+
+  @include respond(phone) {
+    grid-template-rows: 10rem 1fr;
+  }
 
   &__menu-bar {
     align-self: stretch;
@@ -13,6 +22,15 @@
     grid-template-columns: 1fr 15% 15%;
     align-items: center;
     justify-content: center;
+
+    @include respond(tab-port) {
+      grid-template-columns: 1fr 15rem 15rem;
+    }
+    @include respond(phone) {
+      // margin-top: 2rem;
+      grid-row: 50% 50%;
+      grid-template-columns: repeat(5, 1fr);
+    }
   }
 
   &__menu-contact,
@@ -26,8 +44,26 @@
     border: 1px solid transparent;
     transition: all 1s;
 
+    @include respond(phone) {
+      align-self: center;
+      justify-self: center;
+    }
+
     &:hover {
       border: 1px solid #f4eeff;
+    }
+  }
+
+  &__menu-contact {
+    @include respond(phone) {
+      grid-row: 1 / 2;
+      grid-column: 2 / 3;
+    }
+  }
+  &__menu-viewContacts {
+    @include respond(phone) {
+      grid-row: 1 / 2;
+      grid-column: 4 / 5;
     }
   }
 
@@ -37,6 +73,11 @@
     align-items: center;
     width: 100%;
 
+    @include respond(phone) {
+      align-self: start;
+      grid-column: 1 / end;
+    }
+
     &__input {
       height: 2rem;
       border-radius: 7px;
@@ -45,6 +86,11 @@
       width: 50%;
       border: none;
       outline: none;
+
+      @include respond(tab-port) {
+        margin-left: 15%;
+        width: 70%;
+      }
     }
 
     &__input:active,
@@ -142,19 +188,23 @@
 
   &__user-list {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     font-size: 1.3rem;
     padding: 4rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     // align-items: center;
+    // justify-items: center;
+    // align-content: center;
   }
 
   &__user-display {
-    align-self: baseline;
-    min-height: 22rem;
+    align-self:baseline;
+    min-height: 25rem;
+    // height: auto;
     width: 25%;
+    min-width: 30rem;
     line-height: 2rem;
     padding: 1rem;
     border-top-left-radius: 4px;
@@ -162,6 +212,19 @@
     background-color: white;
     margin-right: 5rem;
     margin-bottom: $form-margin-bottom;
+    
+    @include respond(tab-port) {
+      margin-right: 0;
+      margin-bottom: $form-margin-bottom-tab;
+      width: 60%;
+      min-width: 30rem;
+    }
+    @include respond(phone) {
+      // margin-right: 0;
+      // margin-bottom: $form-margin-bottom-tab;
+      // width: 80%;
+      // min-width: 30rem;
+    }
   }
 
   &__fullname-display {
@@ -182,10 +245,11 @@
   &__info {
     display: grid;
     grid-template-columns: 7rem 1fr;
-    grid-row: 5rem;
+    grid-template-rows: minmax( max-content,4rem);
 
-    grid-auto-rows: 4rem;
-    // grid-auto-columns: 1fr 1fr;
+    grid-auto-rows: minmax( max-content,4rem);
+    
+    
   }
 
   &__info-value {
@@ -201,8 +265,10 @@
   .btn {
     // align-self: center;
     width: 35%;
+    // width: 20rem;
     margin-right: 3rem;
     margin-bottom: 0;
     text-transform: capitalize;
+    font-size: 1.2rem;
   }
 }
