--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -9,19 +9,25 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+
+  @include respond(tab-port) {
+    font-size: 55%;
+  }
 }
 
 body {
   font-family: $font;
   font-size: 1.6rem;
   color: $text__color;
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(
     to bottom,
     rgba(255, 255, 255, 1),
     rgba(244, 238, 255, 0.87),
     rgba(66, 72, 116, 0.3)
   );
+  @include respond(tab-port) {
+  }
 }
 
 .layout {
@@ -57,6 +63,6 @@ a:visited {
   color: inherit;
 }
 
-ul{
+ul {
   list-style-type: none;
 }
