--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -25,16 +25,18 @@
   &__account,
   &__sign-up {
     text-align: center;
-    // background-color: khaki;
+    background-color: white;
+    border: 1px solid $color-palette-1;
+    border-radius: 3px;
     width: 11rem;
-    line-height: 4rem;
+    line-height: 3rem;
     cursor: pointer;
     text-transform: capitalize;
-    border: 1px solid transparent;
-    transition: all 1s;
+    transition: all .5s;
 
     &:hover {
-      border: 1px solid $color-palette-1;
+      border: 1px solid $primary;
+      background-color: transparent;
     }
   }
 }
