error management added and  helper, signin and signup updated

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -66,3 +66,10 @@ a:visited {
 ul {
   list-style-type: none;
 }
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
