--- a/src/styles/_landing-page.scss
+++ b/src/styles/_landing-page.scss
@@ -21,36 +21,31 @@
     display: flex;
     align-content: center;
     align-items: center;
-    // width: 100%;
     height: 80%;
   }
-  // sign in
+
   &__sign-in__form,
   &__sign-up__form {
     box-shadow: 2px 1px 9px 0px rgba(0, 0, 0, 0.19);
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
+    @include border-top-left-right-radius(3px, 3px);
+  
     background-color: #f4eeff;
     width: 30rem;
     min-height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    // justify-content: space-evenly;
   }
   &__sign-in__text,
   &__sign-up__text {
     color: white;
     align-self: center;
     padding: 2rem;
-    border-top-left-radius: inherit;
-    border-top-right-radius: inherit;
+    @include border-top-left-right-radius(inherit,inherit);
     overflow: hidden;
     background-color: $primary;
     text-align: center;
     width: 100%;
-    // height: 5rem;
-    // margin-top: -5rem;
     margin-bottom: $form-margin-bottom;
   }
 
